test/runtime/fail/expr/pkg_no_index.hy

// expect error: Expected `.` after package name `io`, found `hello`

import "io"

let a = io hello
